--- a/appStatus.json
+++ b/appStatus.json
@@ -1,8 +1,12 @@
 {
   "open": true,
-  "versionCode": 124,
-  "appHint":"由于某些原因，本App暂时关闭，再次开启使用时会在QQ群中通知",
-  "openAd":true,
-  "rewardHint":"撸码不易，各位童鞋可以打赏一波鼓励鼓励，不管打赏多少，你们的行动就是我的动力，谢谢各位！",
-  "rewardNum":1
+  "newOpen": true,
+  "appOpen":true,
+  "versionCode": 126,
+  "appHint":"由于某些原因，升级流程有所改变，希望大家等待升级，升级到最新版，老版本停止使用！",
+  "openAd":false,
+  "rewardHint":"撸码不易，希望各位打赏一波鼓励鼓励，你们的鼓励就是我的动力，谢谢各位！",
+  "rewardNum":1,
+  "message":"希望大家更新到最新版，后面会更改升级流程，老版本会停止更新，会在某个时间点停止老版本的使用，具体停止时间会通知，谢谢大家支持与理解！",
+  "messageNum":1
 }
